--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@
 name = "handlebars-iron"
 version = "0.1.0"
 authors = ["Ning Sun <sunng@about.me>"]
+description = "Handlebars templating middleware for Iron."
+license = "MIT"
+keywords = ["handlebars", "templating", "web", "webdev", "iron"]
+homepage = "https://github.com/sunng87/handlebars-iron"
+repository = "https://github.com/sunng87/handlebars-iron"
+documentation = "http://sunng.info/handlebars-iron/"
+readme = "README.md"
 
 [dependencies]
 
