(chore) update walker version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ iron = "*"
 handlebars = "*"
 rustc-serialize = "*"
 plugin = "*"
-walker = "1.0.0"
+walker = "*"
 #notify = "*"
 
 [dev-dependencies]
