(chore) pr merged, use release version of iron

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 
 [dependencies]
 
-##iron = "*"
+iron = "*"
 handlebars = "*"
 rustc-serialize = "*"
 plugin = "*"
@@ -22,5 +22,3 @@ notify = "*"
 [dev-dependencies]
 tojson_macros = "*"
 
-[dependencies.iron]
-path = "../../var/src/iron"
