(chore) update travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ rust:
   - nightly
   - 1.0.0
   - beta
-sudo: false
 after_success: |
-    cargo doc \
-    && echo '<meta http-equiv=refresh content=0;url=handlebars-iron/index.html>' > target/doc/index.html && \
-    sudo pip install ghp-import && \
-    ghp-import -n target/doc && \
-    git push -qf https://${TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
+  echo $TRAVIS_RUST_VERSION && \
+  [ $TRAVIS_BRANCH == 'master' ] && \
+  [ $TRAVIS_RUST_VERSION == '1.0.0' ] && \
+  cargo doc && \
+  echo '<meta http-equiv=refresh content=0;url=handlebars-iron/index.html>' > target/doc/index.html && \
+  sudo pip install ghp-import && \
+  ghp-import -n target/doc && \
+  git push -qf https://${TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
