(chore) make watch function an optional feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,8 @@ handlebars = "*"
 rustc-serialize = "*"
 plugin = "*"
 walker = "*"
-notify = "*"
+notify = { version = "*", optional = true }
+
+[features]
+default = []
+watch = ["notify"]
