--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ rust:
   - 1.4.0
   - 1.3.0
   - beta
+branches:
+  only:
+    - master
+script:
+  - |
+      cargo test &&
+      cargo test --features watch
 after_success: |
   echo $TRAVIS_RUST_VERSION && \
   [ $TRAVIS_BRANCH == 'master' ] && \
