--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 
 [dependencies]
 
-iron = "^0.2.0"
+iron = { version = "^0.2.0", default-features = false }
 handlebars = "^0.11.1"
 rustc-serialize = "^0.3.15"
 plugin = "^0.2.6"
