--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ iron = { version = "^0.2.0", default-features = false }
 handlebars = "^0.11.1"
 rustc-serialize = "^0.3.15"
 plugin = "^0.2.6"
-notify = { version = "^2.3", optional = true }
+notify = { git = "https://github.com/passcod/rsnotify", branch = "use-walkdir", optional = true }
 log = "^0.3"
 walkdir = "^0.1"
 
