--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,20 @@ readme = "README.md"
 [dependencies]
 
 iron = { version = "^0.2.0", default-features = false }
-handlebars = "^0.12.1"
-rustc-serialize = "^0.3.15"
+handlebars = { version = "^0.13.1", default-features = false }
+rustc-serialize = { version = "^0.3.16", optional = true }
+serde = { version = "^0.6.0", optional = true }
+serde_json = { version = "^0.6.0", optional = true }
 plugin = "^0.2.6"
 notify = { version = "^2.5", optional = true }
 log = "^0.3"
 walkdir = "^0.1"
 
 [features]
-default = []
+default = ["handlebars/default", "rustc-serialize"]
 watch = ["notify"]
+serde_type = ["handlebars/serde_type", "serde", "serde_json"]
 
 [dev-dependencies]
-env_logger = "*"
-maplit = "*"
+env_logger = "^0.3.2"
+maplit = "^0.1.3"
