--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,15 @@ notify = { version = "^2.5", optional = true }
 log = "^0.3"
 walkdir = "^0.1"
 
+serde_macros = { version = "^0.6.0", optional = true }
+serde_codegen = { version = "^0.6.0", optional = true, default-features = false }
+
+
 [features]
 default = ["handlebars/default", "rustc-serialize"]
 watch = ["notify"]
 serde_type = ["handlebars/serde_type", "serde", "serde_json"]
+unstable = ["serde_type", "serde_macros", "serde_codegen"]
 
 [dev-dependencies]
 env_logger = "^0.3.2"
