(test) update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,21 @@ rust:
   - nightly
   - beta
   - 1.5.0
-branches:
-  only:
-    - master
+  - 1.6.0
+before_script:
+- |
+    pip install 'travis-cargo<0.2' --user &&
+    export PATH=$HOME/.local/bin:$PATH
 script:
   - |
       cargo test &&
-      cargo test --features watch
+      cargo test --features watch &&
+      travis-cargo --only nightly test -- --no-default-features
 after_success: |
   echo $TRAVIS_RUST_VERSION && \
   [ $TRAVIS_BRANCH == 'master' ] && \
-  [ $TRAVIS_RUST_VERSION == '1.5.0' ] && \
+  [ $TRAVIS_RUST_VERSION == '1.6.0' ] && \
+  [ "$TRAVIS_PULL_REQUEST" == "false" ] && \
   cargo doc && \
   echo '<meta http-equiv=refresh content=0;url=handlebars_iron/index.html>' > target/doc/index.html && \
   sudo pip install ghp-import && \
