--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ readme = "README.md"
 [dependencies]
 
 iron = { version = "^0.2.0", default-features = false }
-handlebars = { version = "^0.13.1", default-features = false }
+handlebars = { version = "^0.14.0", default-features = false }
+#handlebars = { path = "../handlebars", default-features = false }
 rustc-serialize = { version = "^0.3.16", optional = true }
 serde = { version = "^0.6.0", optional = true }
 serde_json = { version = "^0.6.0", optional = true }
