--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ unstable = ["serde_type", "serde_macros"]
 [dev-dependencies]
 env_logger = "^0.3.2"
 maplit = "^0.1.3"
-router = "^0.1.0"
+router = "=0.1.0"
