--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 
 [dependencies]
 
-iron = { version = "^0.2.0", default-features = false }
+iron = "^0.3.0"
 handlebars = { version = "^0.16.0", default-features = false }
 #handlebars = { path = "../handlebars", default-features = false }
 rustc-serialize = { version = "^0.3.16", optional = true }
@@ -35,4 +35,4 @@ unstable = ["serde_type", "serde_macros"]
 [dev-dependencies]
 env_logger = "^0.3.2"
 maplit = "^0.1.3"
-router = "=0.1.0"
+router = "^0.1.0"
