--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "handlebars-iron"
-version = "0.14.1-pre"
+version = "0.15.0"
 authors = ["Ning Sun <sunng@about.me>"]
 description = "Handlebars templating middleware for Iron."
 license = "MIT"
