--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,7 @@ unstable = ["serde_type", "serde_macros"]
 env_logger = "^0.3.2"
 maplit = "^0.1.3"
 router = "^0.1.0"
+
+[package.metadata.release]
+sign-commit = true
+upload-doc = true
