--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: rust
 rust:
   - nightly
   - beta
-  - 1.8.0
-  - 1.9.0
+  - stable
 before_script:
 - |
     pip install 'travis-cargo<0.2' --user &&
