--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,14 +23,14 @@ plugin = "^0.2.6"
 notify = { version = "^2.5", optional = true }
 log = "^0.3"
 walkdir = "^0.1"
-serde_macros = { version = "^0.8.0", optional = true }
+serde_derive = { version = "^0.8.10", optional = true }
 
 
 [features]
 default = ["handlebars/default", "rustc-serialize"]
 watch = ["notify"]
 serde_type = ["handlebars/serde_type", "serde", "serde_json"]
-unstable = ["serde_type", "serde_macros"]
+unstable = ["serde_type", "serde_derive"]
 
 [dev-dependencies]
 env_logger = "^0.3.2"
