--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 
 iron = "^0.4.0"
 #handlebars = { path = "../handlebars", default-features = false }
-handlebars = { version = "^0.22.0", default-features = false }
+handlebars = { version = "^0.23.0", default-features = false }
 rustc-serialize = { version = "^0.3.16", optional = true }
 serde = { version = "^0.8.0", optional = true }
 serde_json = { version = "^0.8.0", optional = true }
@@ -30,7 +30,7 @@ serde_derive = { version = "^0.8.10", optional = true }
 default = ["handlebars/default", "rustc-serialize"]
 watch = ["notify"]
 serde_type = ["handlebars/serde_type", "serde", "serde_json"]
-partial4 = ["handlebars/partial4"]
+partial_legacy = ["handlebars/partial_legacy"]
 unstable = ["serde_type", "serde_derive"]
 
 [dev-dependencies]
