--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ unstable = ["serde_type", "serde_derive"]
 env_logger = "^0.3.2"
 maplit = "^0.1.3"
 router = "^0.5.0"
+flate2 = "0.2"
 
 [package.metadata.release]
 sign-commit = true
