--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,23 +15,21 @@ readme = "README.md"
 
 iron = "^0.5.0"
 #handlebars = { path = "../handlebars", default-features = false }
-handlebars = { version = "^0.26.1", default-features = false }
-serde = { version = "^1.0.0" }
-serde_json = { version = "^1.0.0" }
+handlebars = "^0.26.1"
+serde = "^1.0.0"
+serde_json = "^1.0.0"
 plugin = "^0.2.6"
 notify = { version = "^3.0", optional = true }
 log = "^0.3"
 walkdir = "^1.0"
-serde_derive = { version = "^1.0.0", optional = true }
 
 
 [features]
-default = ["handlebars/default"]
 watch = ["notify"]
 partial_legacy = ["handlebars/partial_legacy"]
-unstable = ["serde_derive"]
 
 [dev-dependencies]
+serde_derive = "^1.0.0"
 env_logger = "^0.3.2"
 maplit = "^0.1.3"
 router = "^0.5.0"
