--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 keywords = ["handlebars", "templating", "web", "webdev", "iron"]
 homepage = "https://github.com/sunng87/handlebars-iron"
 repository = "https://github.com/sunng87/handlebars-iron"
-documentation = "http://sunng87.github.io/handlebars-iron/"
+documentation = "https://docs.rs/handlebars-iron/"
 readme = "README.md"
 
 [dependencies]
