--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 
 iron = "^0.5.0"
 #handlebars = { path = "../handlebars", default-features = false }
-handlebars = "^0.28.1"
+handlebars = "^0.29.0"
 serde = "^1.0.0"
 serde_json = "^1.0.0"
 plugin = "^0.2.6"
@@ -37,3 +37,4 @@ flate2 = "0.2"
 [package.metadata.release]
 sign-commit = true
 upload-doc = true
+pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"} ]
