--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,13 @@ readme = "README.md"
 
 [dependencies]
 
-iron = "^0.5.0"
-#handlebars = { path = "../handlebars", default-features = false }
+iron = "^0.6.0"
+#handlebars = { path = "../handlebars" }
 handlebars = "^0.29.0"
 serde = "^1.0.0"
 serde_json = "^1.0.0"
 plugin = "^0.2.6"
-notify = { version = "^3.0", optional = true }
+notify = { version = "^4.0", optional = true }
 log = "^0.3"
 walkdir = "^1.0"
 
@@ -31,7 +31,7 @@ watch = ["notify"]
 serde_derive = "^1.0.0"
 env_logger = "^0.3.2"
 maplit = "^0.1.3"
-router = "^0.5.0"
+router = "^0.6.0"
 flate2 = "0.2"
 
 [package.metadata.release]
