--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ flate2 = "0.2"
 [package.metadata.release]
 sign-commit = true
 upload-doc = true
-pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"} ]
+pre-release-replacements = [ {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"}, {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"} ]
