--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 
 iron = "^0.6.0"
 #handlebars = { path = "../handlebars" }
-handlebars = "^2.0"
+handlebars = { version = "^3.0", features = ["dir_source"] }
 serde = "^1.0.0"
 serde_json = "^1.0.0"
 plugin = "^0.2.6"
